# privalytics

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/workflows/: build.yml  clippy.yml
config/: Config.example.toml  Users.example.toml
dev-server/: Cargo.toml
dev-server/src/: main.rs
docs/: 1-structure.md  2-todo.md  3-responses.md  4-libraries-and-tools.md  4-libraries.md  index.md
docs/auth/: index.md
docs/binary/: index.md
gui/web/: .commit  index.html
gui/web/assets/: index.8c735e85.js  index.c807b41a.css
gui/web/scripts/: api.js  loader.js  utils.js
scripts/: build.cmd  build.sh  dev-run.cmd  dev-run.ps1
src/: analytics_def.rs  main.rs
src/args/: mod.rs
src/auth/: mod.rs  requester.rs
src/auth/defs/: mod.rs  responses.rs  scope.rs  scopes.rs
src/auth/defs/responses/: intermediate.rs  login_error.rs  mod.rs  server_responses.rs
src/config/: mod.rs
src/file/: mod.rs
src/path/: mod.rs
src/saving/: mod.rs
src/serialization/: mod.rs
src/server/: mod.rs
src/server/add_entry/: mod.rs
src/server/delete_entry/: mod.rs
src/server/errors/: mod.rs
src/server/fairings/: cors_fairing.rs  mod.rs  preflight_fairing.rs
src/server/guards/: auth_guard.rs  mod.rs
src/server/retrieve_entries/: mod.rs
src/server/routes/: mod.rs
src/server/routes/add_entry/: add_entry_error.rs  mod.rs
src/server/routes/api/: add_entry.rs  mod.rs
src/server/routes/delete_entry/: delete_entry_error.rs  mod.rs
src/server/routes/errors/: mod.rs
src/server/routes/retrieve_entries/: errors.rs  mod.rs  retrieve_entries_error.rs
src/structures/: analytics.rs  config.rs  entry.rs  mod.rs  users.rs
src/structures/errors/: add_entry_error.rs  mod.rs
src/users/: mod.rs
