[package]
name = "privalytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.78" }
bincode = { version = "2.0.0-beta.2", features = ["serde"] }
uuid = { version = "0.8.2", features = ["v4"] }
