[package]
name = "privalytics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
uuid = { version = "0.8", features = ["v4"] }
bson = "2.3"
toml = "0.5"
sha2 = "0.10"
hex = "0.4"
#rocket = { version = "0.5.0-rc.1", features = ["json"] }
#clap = { version = "3.0.14", features = ["derive"] }
#serde = { version = "1.0.136", features = ["derive"] }
#serde_json = { version = "1.0.78" }
#serde_repr = "0.1"
#bincode = { version = "2.0.0-beta.2", features = ["serde"] }
#uuid = { version = "0.8.2", features = ["v4"] }
#reqwest = { version = "0.11.9", features = ["json"] }
#jsonwebtoken = { version = "8.0.1", default-features = false }
#async-trait = "0.1.52"
