[package]
name = "dev-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
jsonwebtoken = { version = "8.0.1", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.78" }

